--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "sort-by": "^0.0.2",
