--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "nuka-carousel": "^6.0.3",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
