--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-table": "^7.8.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13"
   },
