--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@tanstack/react-query": "^5.7.2",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
+    "framer-motion": "^10.16.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "nuka-carousel": "^6.0.3",
