--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
     "sort-by": "^0.0.2",
