--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-table": "^7.8.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13"
   },
