--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@tanstack/react-query": "^5.7.2",
+    "aos": "^2.3.4",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.2",
